# Gatekeeper

./: docker-compose.yml  package-lock.json  package.json
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
frontend/: index.html
frontend/src/app/: App.tsx
frontend/src/features/flags/: FlagControls.tsx  FlagProvider.tsx  useFlags.ts
frontend/src/features/preview/: ChatWidget.tsx  FeatureGate.tsx  PreviewShell.tsx
frontend/src/styles/: ChatWidget.css  index.css
src/components/: Card.tsx
src/features/preview/: ChatWidget.tsx  FakeDashboard.tsx
src/styles/: FakeDashboard.css
